--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.0-rc.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
